--- a/config/application.yml
+++ b/config/application.yml
@@ -18,6 +18,6 @@ DEFAULT_PER_SECTION: '4'
 DEFAULT_PER_PAGE: '3'
 DEFAULT_PER_COMMENT: '1'
 
-google_client_id: '203746157920-nlavgc2dg1hssq6hm9ib6161mqqobskq.apps.googleusercontent.com'
-google_client_secret: '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'
+GOOGLE_CLIENT_ID: '203746157920-nlavgc2dg1hssq6hm9ib6161mqqobskq.apps.googleusercontent.com'
+GOOGLE_CLIENT_SECRET: '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'
 
