--- a/config/application.yml
+++ b/config/application.yml
@@ -21,3 +21,15 @@ DEFAULT_PER_COMMENT: '1'
 GOOGLE_CLIENT_ID: '203746157920-nlavgc2dg1hssq6hm9ib6161mqqobskq.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET: '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'
 
+VNPAY_E_WALLET_PAYMENT_ID: 'ab002207-dd09-424c-95c9-57d0da72d632'
+
+VNP_TMNCODE: '7SAYFOTA'
+VNP_HASH_SECRET: 'PIUHZNYHKTWUAURKADLITITJYGLUSBKS'
+VNP_URL: 'https://sandbox.vnpayment.vn/paymentv2/vpcpay.html'
+VNP_VERSION: '2.0.1'
+VNP_RETURN_URL: 'http://127.0.0.1:3000/checkout/result'
+VNP_ORDER_TYPE: '200000'
+VNP_ORDER_INFO: 'Payment for purchases'
+VNP_LOCALE: 'vn'
+VNP_CURRCODE: 'VND'
+VNP_COMMAND: 'pay'
