user featured coding

--- a/config/application.yml
+++ b/config/application.yml
@@ -20,6 +20,8 @@ DEFAULT_PER_COMMENT: '1'
 
 GOOGLE_CLIENT_ID: '203746157920-nlavgc2dg1hssq6hm9ib6161mqqobskq.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET: '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'
+FACEBOOK_APP_ID: '661977398934284'
+FACEBOOK_APP_SECRET: '190f89d2d4dcd7ad4176e2a60c1b17ee'
 
 VNPAY_E_WALLET_PAYMENT_ID: 'ab002207-dd09-424c-95c9-57d0da72d632'
 
