change data input vnpay

--- a/config/application.yml
+++ b/config/application.yml
@@ -25,8 +25,8 @@ FACEBOOK_APP_SECRET: '190f89d2d4dcd7ad4176e2a60c1b17ee'
 
 VNPAY_E_WALLET_PAYMENT_ID: 'ab002207-dd09-424c-95c9-57d0da72d632'
 
-VNP_TMNCODE: '7SAYFOTA'
-VNP_HASH_SECRET: 'PIUHZNYHKTWUAURKADLITITJYGLUSBKS'
+VNP_TMNCODE: 'ZRIE0UJM'
+VNP_HASH_SECRET: 'LRBRNFGSMEZZHCKSVCITIFJDQEKOQUIT'
 VNP_URL: 'https://sandbox.vnpayment.vn/paymentv2/vpcpay.html'
 VNP_VERSION: '2.0.1'
 VNP_RETURN_URL: 'http://127.0.0.1:3000/checkout/result'
