verify recaptcha done

--- a/config/application.yml
+++ b/config/application.yml
@@ -38,3 +38,6 @@ VNP_COMMAND: 'pay'
 
 EMAIL_USERNAME: 'phamhunggl721@gmail.com'
 EMAIL_PASSWORD: 'znyzhrsfayunagmp'
+
+RECAPTCHA_SITE_KEY: '6LdjMx8jAAAAAI52n6SkjkppISEvfsXjzuOGU240'
+RECAPTCHA_SECRET_KEY: '6LdjMx8jAAAAAGrBnfMcP-irDNPhF1s7Y79zA6kr'
