web client done

--- a/config/application.yml
+++ b/config/application.yml
@@ -24,6 +24,7 @@ FACEBOOK_APP_ID: '661977398934284'
 FACEBOOK_APP_SECRET: '190f89d2d4dcd7ad4176e2a60c1b17ee'
 
 VNPAY_E_WALLET_PAYMENT_ID: 'ab002207-dd09-424c-95c9-57d0da72d632'
+COD_CASH_ON_DELIVERY_PAYMENT_ID: 'f0790e0b-15f2-4bae-a9a3-87fe0017ca9c'
 
 VNP_TMNCODE: 'ZRIE0UJM'
 VNP_HASH_SECRET: 'LRBRNFGSMEZZHCKSVCITIFJDQEKOQUIT'
