test cloudinary done

--- a/config/application.yml
+++ b/config/application.yml
@@ -42,3 +42,5 @@ EMAIL_PASSWORD: 'znyzhrsfayunagmp'
 
 RECAPTCHA_SITE_KEY: '6LdjMx8jAAAAAI52n6SkjkppISEvfsXjzuOGU240'
 RECAPTCHA_SECRET_KEY: '6LdjMx8jAAAAAGrBnfMcP-irDNPhF1s7Y79zA6kr'
+
+CLOUDINARY_URL: 'cloudinary://586536231795384:ldxxFlhB57gl7bCZl9kMnJKC398@dlzgqgu4l'
