--- a/config/application.yml
+++ b/config/application.yml
@@ -30,7 +30,7 @@ VNP_TMNCODE: 'ZRIE0UJM'
 VNP_HASH_SECRET: 'LRBRNFGSMEZZHCKSVCITIFJDQEKOQUIT'
 VNP_URL: 'https://sandbox.vnpayment.vn/paymentv2/vpcpay.html'
 VNP_VERSION: '2.0.1'
-VNP_RETURN_URL: 'http://127.0.0.1:3000/checkout/result'
+VNP_RETURN_URL: 'https://yolo-shop-ecommerce.herokuapp.com/checkout/result'
 VNP_ORDER_TYPE: '200000'
 VNP_ORDER_INFO: 'Payment for purchases'
 VNP_LOCALE: 'vn'
